--- a/rfq.html
+++ b/rfq.html
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>rfq</title>
+    <title>RFQ LANDING PAGE</title>
+    <link rel="stylesheet" href="./assets/styles/rfq.css">
 </head>
+
 <body>
-    
+    <header>
+    <div class="container">
+            <nav>
+                <div class="nav-head">
+                    <div class="logo">
+                        <img src="./assets/imgs/logo.png" alt="logotype">
+                    </div>
+                    <div class="text-nav">
+                        <a>Home</a>
+                        <a>Products</a>
+                        <a>Services</a>
+                        <a>Smart RFQ</a>
+                        <a>Smart Contract</a>
+                    </div>
+                    <div class="registration">
+                        <button class="get">Get Started</button>
+                        <div class="icons">
+                            <img src="./assets/imgs/poisk.svg" alt="poisk" class="search">
+                            <img src="./assets/imgs/people.svg" alt="people" class="people">
+                        </div>
+                    </div>
+                </div>
+            </nav>
+            <section-head>
+                <div class="text-f">
+                    <h1>First business RFQ </h1>
+                    <h3>process for alternative to domestic and cross border tendering</h3>
+                </div>
+                <div class="illustration-f">
+                    <img src="./assets/imgs/young people.svg" alt="" class="young-people">
+                </div>
+            </section-head>
+        </div>
+    </header>
 </body>
+
 </html>
