--- a/rfq.html
+++ b/rfq.html
@@ -12,7 +12,7 @@
 <body>
     <header>
     <div class="container">
-            <nav>
+            <div class="nav">
                 <div class="nav-head">
                     <div class="logo">
                         <img src="./assets/imgs/logo.png" alt="logotype">
@@ -32,16 +32,20 @@
                         </div>
                     </div>
                 </div>
-            </nav>
-            <section-head>
+            <div>
+            <div class="section-head">
                 <div class="text-f">
-                    <h1>First business RFQ </h1>
+                    <h1>First business RFQ</h1>
                     <h3>process for alternative to domestic and cross border tendering</h3>
+                    <img src="./assets/imgs/star gradient.svg" class="star">
+                    <img src="./assets/imgs/chart element.svg" class="el-1">
+                    <img src="./assets/imgs/chart element-1.svg" class="el-2">
+                    <img src="./assets/imgs/chart element-2.svg" class="el-3">
                 </div>
                 <div class="illustration-f">
                     <img src="./assets/imgs/young people.svg" alt="" class="young-people">
                 </div>
-            </section-head>
+            </div>
         </div>
     </header>
 </body>
