--- a/rfq.html
+++ b/rfq.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <header>
-    <div class="container">
+    <div class="section-main">
+        <div class="container">
             <div class="nav">
                 <div class="nav-head">
                     <div class="logo">
@@ -32,22 +32,72 @@
                         </div>
                     </div>
                 </div>
-            <div>
-            <div class="section-head">
-                <div class="text-f">
-                    <h1>First business RFQ</h1>
-                    <h3>process for alternative to domestic and cross border tendering</h3>
-                    <img src="./assets/imgs/star gradient.svg" class="star">
-                    <img src="./assets/imgs/chart element.svg" class="el-1">
-                    <img src="./assets/imgs/chart element-1.svg" class="el-2">
-                    <img src="./assets/imgs/chart element-2.svg" class="el-3">
-                </div>
-                <div class="illustration-f">
-                    <img src="./assets/imgs/young people.svg" alt="" class="young-people">
+                <div>
+                    <div class="section-head">
+                        <div class="text-f">
+                            <h1>First business RFQ</h1>
+                            <h3>process for alternative to domestic and cross border tendering</h3>
+                            <img src="./assets/imgs/star gradient.svg" class="star">
+                            <img src="./assets/imgs/chart element.svg" class="el-1">
+                            <img src="./assets/imgs/chart element-1.svg" class="el-2">
+                            <img src="./assets/imgs/chart element-2.svg" class="el-3">
+                        </div>
+                        <div class="illustration-f">
+                            <img src="./assets/imgs/young people.svg" alt="" class="young-people">
+                            <div class="slaider-rfq">
+                                <div class="line-1"></div>
+                                <div class="line-1"></div>
+                                <div class="line-1" id="line-3"></div>
+                                <div class="line-1"></div>
+                                <div class="line-1"></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </header>
+    </div>
+    <div class="section-servies">
+        <div class="container">
+            <h1 class="main">OUR SERVIES</h1>
+            <div class="card-section">
+                <div id="card-first">
+                    <div class="card-text">
+                        <h1>OUR SERVIES</h1>
+                        <div class="p-card-1">
+                            <p>hybrid global purchase, sales and business gateway for simple, on-time, risk free smart RFQ</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-2">
+                    <h1>Fraud prevention</h1>
+                    <p>three layer backlog verification system mitigate the fake quations</p>
+                </div>
+                <div class="card-3">
+                    <h1>Realtime proposal</h1>
+                    <p>provides best and effective proposal from users</p>
+                </div>
+                <div class="card-4">
+                    <h1>Better options</h1>
+                    <p>tailored and selective proposal from suppliers to make decision and procurement and more
+                        profitable</p>
+                </div>
+                <div class="card-5">
+                    <h1>Procurement analytics</h1>
+                    <p>Advanced tools create better effective response based on users business categories</p>
+                </div>
+                <div class="card-6">
+                    <h1>Smart technology</h1>
+                    <p> using block chain technlogy integration snake price and stock updates on realtime </p>
+                </div>
+                <div class="card-7">
+                    <h1>Smart proposal</h1>
+                    <p>reduce the fake RFQ to avoid the suppliers and business owners to dliver better and confirm
+                        business actions</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
