первая страничка -первый блок сделан

--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
     <title>Hefrog Marketplace</title>
 </head>
 <body>
-<<<<<<< HEAD
-    <!--ГЛАВНАЯ СТРАНИЦА-->
+<!--ГЛАВНАЯ СТРАНИЦА-->
 <div class="wrapper">
     <nav class="navbar">
         <!--логотип-->
         <div class="container">
-            <img src="./assets/imgs/logo.png" alt="logo"></img>
+            <div class="logo"><img src="./assets/imgs/logo.png" alt="logo"></img></div>
             <!--меню-->
             <ul class="navbar-menu">
                 <li><a href="#">Home</a></li>
@@ -22,8 +21,20 @@
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Smart RFQ</a></li>
                 <li><a href="#">Smart Contact</a></li>
-                <li><a href="#">Get Started</a></li>
-            </ul>
+                <li><a href="#" class="get">Get Started</a></li>
+                <div class="iconss">
+                    <img src="./assets/imgs/lupa.png" alt="lupa" class="icons"></img>
+                    <img src="./assets/imgs/contact.png" alt="contact" class="icons"></img>
+                </div>
+            </ul>    
+            
+        </div>
+        <div class="bigtext">
+            <div class="text">
+                <p class="title">World’s First one-stop <span class="bold">unified Service and execution company</span></p>
+                <p class="opis">powering your purchase, Sales, and business</p>
+            </div>
+            <img src="./assets/imgs/Stepping up.png" alt="big man">
         </div>
     </nav>
 </div>
