--- a/rfq.html
+++ b/rfq.html
@@ -63,37 +63,61 @@
             <div class="card-section">
                 <div id="card-first">
                     <div class="card-text">
-                        <h1>OUR SERVIES</h1>
-                        <div class="p-card-1">
-                            <p>hybrid global purchase, sales and business gateway for simple, on-time, risk free smart RFQ</p>
+                        <div class="card-text-2">
+                            <h1>OUR SERVIES</h1>
+                            <div class="p-card-1">
+                                <p>hybrid global purchase, sales and business gateway for simple, on-time, risk free
+                                    smart RFQ</p>
+                            </div>
                         </div>
+                        <img src="./assets/imgs/people-it.png" alt="" class="people-it">
                     </div>
                 </div>
-                <div class="card-2">
-                    <h1>Fraud prevention</h1>
-                    <p>three layer backlog verification system mitigate the fake quations</p>
-                </div>
-                <div class="card-3">
-                    <h1>Realtime proposal</h1>
-                    <p>provides best and effective proposal from users</p>
-                </div>
-                <div class="card-4">
-                    <h1>Better options</h1>
-                    <p>tailored and selective proposal from suppliers to make decision and procurement and more
-                        profitable</p>
-                </div>
-                <div class="card-5">
-                    <h1>Procurement analytics</h1>
-                    <p>Advanced tools create better effective response based on users business categories</p>
-                </div>
-                <div class="card-6">
-                    <h1>Smart technology</h1>
-                    <p> using block chain technlogy integration snake price and stock updates on realtime </p>
-                </div>
-                <div class="card-7">
-                    <h1>Smart proposal</h1>
-                    <p>reduce the fake RFQ to avoid the suppliers and business owners to dliver better and confirm
-                        business actions</p>
+                <div class="card-second-four">
+                    <div class="card-gr">
+                        <div class="card" id="c-1">
+                            <img src="./assets/imgs/image 2lupa.svg">
+                            <h1>Fraud prevention</h1>
+                            <p>three layer backlog verification system mitigate the fake quations</p>
+                        </div>
+                    </div>
+                    <div class="card-gr">
+                        <div class="card">
+                            <img src="./assets/imgs/image 3time.svg">
+                            <h1>Realtime proposal</h1>
+                            <p>provides best and effective proposal from users</p>
+                        </div>
+                    </div>
+                    <div class="card-gr">
+                        <div class="card">
+                            <img src="./assets/imgs/image 4like.svg">
+                            <h1>Better options</h1>
+                            <p>tailored and selective proposal from suppliers to make decision and procurement and more
+                                profitable</p>
+                        </div>
+                    </div>
+                    <div class="card-gr">
+                        <div class="card">
+                            <img src="./assets/imgs/image 3graphics.svg">
+                            <h1>Procurement analytics</h1>
+                            <p>Advanced tools create better effective response based on users business categories</p>
+                        </div>
+                    </div>
+                    <div class="card-gr">
+                        <div class="card">
+                            <img src="./assets/imgs/image 3nero.svg">
+                            <h1>Smart technology</h1>
+                            <p> using block chain technlogy integration snake price and stock updates on realtime </p>
+                        </div>
+                    </div>
+                    <div class="card-gr">
+                        <div class="card">
+                            <img src="./assets/imgs/image 3book.svg">
+                            <h1>Smart proposal</h1>
+                            <p>reduce the fake RFQ to avoid the suppliers and business owners to dliver better and confirm
+                                business actions</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
