--- a/rfq.html
+++ b/rfq.html
@@ -18,17 +18,17 @@
                         <img src="./assets/imgs/logo.png" alt="logotype">
                     </div>
                     <div class="text-nav">
-                        <a>Home</a>
-                        <a>Products</a>
-                        <a>Services</a>
-                        <a>Smart RFQ</a>
-                        <a>Smart Contract</a>
+                        <a href="#">Home</a>
+                        <a href="#">Products</a>
+                        <a href="#">Services</a>
+                        <a href="#">Smart RFQ</a>
+                        <a href="#">Smart Contract</a>
                     </div>
                     <div class="registration">
                         <button class="get">Get Started</button>
                         <div class="icons">
-                            <img src="./assets/imgs/poisk.svg" alt="poisk" class="search">
-                            <img src="./assets/imgs/people.svg" alt="people" class="people">
+                            <img src="./assets/imgs/rfq/poisk.svg" alt="poisk" class="search">
+                            <img src="./assets/imgs/rfq/people.svg" alt="people" class="people">
                         </div>
                     </div>
                 </div>
@@ -37,13 +37,13 @@
                         <div class="text-f">
                             <h1>First business RFQ</h1>
                             <h3>process for alternative to domestic and cross border tendering</h3>
-                            <img src="./assets/imgs/star gradient.svg" class="star">
-                            <img src="./assets/imgs/chart element.svg" class="el-1">
-                            <img src="./assets/imgs/chart element-1.svg" class="el-2">
-                            <img src="./assets/imgs/chart element-2.svg" class="el-3">
+                            <img src="./assets/imgs/rfq/star gradient.svg" class="star">
+                            <img src="./assets/imgs/rfq/chart element.svg" class="el-1">
+                            <img src="./assets/imgs/rfq/chart element-1.svg" class="el-2">
+                            <img src="./assets/imgs/rfq/chart element-2.svg" class="el-3">
                         </div>
                         <div class="illustration-f">
-                            <img src="./assets/imgs/young people.svg" alt="" class="young-people">
+                            <img src="./assets/imgs/rfq/young people.svg" alt="" class="young-people">
                             <div class="slaider-rfq">
                                 <div class="line-1"></div>
                                 <div class="line-1"></div>
@@ -70,27 +70,27 @@
                                     smart RFQ</p>
                             </div>
                         </div>
-                        <img src="./assets/imgs/people-it.png" alt="" class="people-it">
+                        <img src="./assets/imgs/rfq/people-it.png" alt="" class="people-it">
                     </div>
                 </div>
                 <div class="card-second-four">
                     <div class="card-gr">
                         <div class="card" id="c-1">
-                            <img src="./assets/imgs/image 2lupa.svg">
+                            <img src="./assets/imgs/rfq/image 2lupa.svg">
                             <h1>Fraud prevention</h1>
                             <p>three layer backlog verification system mitigate the fake quations</p>
                         </div>
                     </div>
                     <div class="card-gr">
                         <div class="card">
-                            <img src="./assets/imgs/image 3time.svg">
+                            <img src="./assets/imgs/rfq/image 3time.svg">
                             <h1>Realtime proposal</h1>
                             <p>provides best and effective proposal from users</p>
                         </div>
                     </div>
                     <div class="card-gr">
                         <div class="card">
-                            <img src="./assets/imgs/image 4like.svg">
+                            <img src="./assets/imgs/rfq/image 4like.svg">
                             <h1>Better options</h1>
                             <p>tailored and selective proposal from suppliers to make decision and procurement and more
                                 profitable</p>
@@ -98,25 +98,231 @@
                     </div>
                     <div class="card-gr">
                         <div class="card">
-                            <img src="./assets/imgs/image 3graphics.svg">
+                            <img src="./assets/imgs/rfq/image 3graphics.svg">
                             <h1>Procurement analytics</h1>
                             <p>Advanced tools create better effective response based on users business categories</p>
                         </div>
                     </div>
                     <div class="card-gr">
                         <div class="card">
-                            <img src="./assets/imgs/image 3nero.svg">
+                            <img src="./assets/imgs/rfq/image 3nero.svg">
                             <h1>Smart technology</h1>
                             <p> using block chain technlogy integration snake price and stock updates on realtime </p>
                         </div>
                     </div>
                     <div class="card-gr">
                         <div class="card">
-                            <img src="./assets/imgs/image 3book.svg">
+                            <img src="./assets/imgs/rfq/image 3book.svg">
                             <h1>Smart proposal</h1>
-                            <p>reduce the fake RFQ to avoid the suppliers and business owners to dliver better and confirm
+                            <p>reduce the fake RFQ to avoid the suppliers and business owners to dliver better and
+                                confirm
                                 business actions</p>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <div class="new-era">
+                <div class="title-new">
+                    <h1>New era of procurement and supply techniques</h1>
+                    <p>next generation smart rfq-making cost effective on time vendor and raw material procurement from
+                        global vendars in one</p>
+                </div>
+                <div class="cards-new">
+                    <div class="card-n">
+                        <img src="./assets/imgs/rfq/image 248.svg">
+                        <div class="card-t">
+                            <h1>Smart filter</h1>
+                            <p>Data science provides better proposal from global selective vendors</p>
+                        </div>
+                    </div>
+                    <div class="card-n"><img src="./assets/imgs/rfq/image 249.svg">
+                        <div class="card-t">
+                            <h1>Realtime proposal</h1>
+                            <p>real time proposal from behalf of hefgro one end business technology</p>
+                        </div>
+                    </div>
+                    <div class="card-n"><img src="./assets/imgs/rfq/image 251.svg">
+                        <div class="card-t">
+                            <h1>Best in market</h1>
+                            <p>deep RFQ analytics provides best global trade services</p>
+                        </div>
+                    </div>
+                    <div class="card-n"><img src="./assets/imgs/rfq/image 250.svg">
+                        <div class="card-t">
+                            <h1>Smart section</h1>
+                            <p>hefgro provides selective proposals with selective options to users to make business
+                                initiation from one platform</p>
+                        </div>
+                    </div>
+                    <div class="card-n"><img src="./assets/imgs/rfq/image 252.svg">
+                        <div class="card-t">
+                            <h1>Smart negotiations</h1>
+                            <p>smart communication to negotiate with selective proposal holders to initiate the smart
+                                contracts</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="smart">
+        <div class="container">
+            <div class="text-img">
+                <img src="./assets/imgs/rfq/Illustration - Asset 7.svg">
+                <div class="text-smart">
+                    <h1>Smart quote sign-up section</h1>
+                    <p>first RFQ system in global trading section to make global <br> trade more simple and secure with
+                        on-time business</p>
+                    <button>Smart RFQ</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="works">
+        <div class="container">
+            <div class="text-works">
+                <h1>How it works</h1>
+                <p>Initiate the RFQ with get better proposal from around the world</p>
+            </div>
+            <div class="img-works">
+                <div class="bloks__works">
+                    <img src="./assets/imgs/rfq/Recruiting with a man, a fishing rod and a candidate profile.svg">
+                    <div class="bloks__text">
+                        <h2>Rise the smart RFQ</h2>
+                        <p>ill the proper requirement with <br>necessary documents from users</p>
+                    </div>
+                </div>
+                <img src="./assets/imgs/rfq/Group 68.svg">
+                <div class="bloks__works">
+                    <img src="./assets/imgs/rfq/robot navigator plots the route.svg">
+                    <div class="bloks__text">
+                        <h2>Verifications</h2>
+                        <p>hree layer inhouse verification techniques <br> verifies the RFQ reality and possibility with
+                            <br> using AI technologies and best experts</p>
+                    </div>
+                </div>
+                <img src="./assets/imgs/rfq/Group 1000001766.svg">
+                <div class="bloks__works">
+                    <img src="./assets/imgs/rfq/Man communicates with a voice assistant.svg">
+                    <div class="bloks__text">
+                        <h2>Request proposal</h2>
+                        <p>irst tailored strategy provides to <br> gathering or collecting feedback <br> to make
+                            business and business <br> more and more powerful from us</p>
+                    </div>
+                </div>
+                <img src="./assets/imgs/rfq/Group 1000001782.svg">
+                <div class="bloks__works">
+                    <img src="./assets/imgs/rfq/robot navigator plots the route-1.svg">
+                    <div class="bloks__text">
+                        <h2>Step into smart contract</h2>
+                        <p>business initiation takes place with <br>selected proposal</p>
+                    </div>
+                </div>
+                <div class="bloks__works">
+                    <img src="">
+                    <h1></h1>
+                    <p></p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="sust">
+        <div class="container">
+            <div class="sust-2">
+                <div class="title-sust">
+                    <h1>Sustainable Services</h1>
+                    <p>we powering to your business with our smart services strategies who are regularize business with
+                        us</p>
+                </div>
+                <div class="card__s">
+                    <div class="card-sust"><img src="./assets/imgs/rfq/image 208.svg">
+                        <h2>Research & analytics</h2>
+                        <p>wide range of research and analytics<br> provides clear insights of global business <br>market
+                            situations for upgrading the</p>
+                    </div>
+                    <div class="card-sust"><img src="./assets/imgs/rfq/image 209.svg">
+                        <h2>Innovations & Technologies</h2>
+                        <p>Strong one end AI- Platform helps to <br> instant procure, hiring supports, <br> technological
+                            team, supply products to <br>global, and real-time </p>
+                    </div>
+                    <div class="card-sust"><img src="./assets/imgs/rfq/image 210.svg">
+                        <h2>Manufacturing</h2>
+                        <p>deep research and analytics invloving in <br> manufacturing, production and <br>operations
+                            related latest technologies <br> that minimize the </p>
+                    </div>
+                    <div class="card-sust"><img src="./assets/imgs/rfq/image 211.svg">
+                        <h2>Cost reduction</h2>
+                        <p>our smart services offering free services <br> that reducing wide range of third party <br> cost
+                            minimizing and on time supports <br> from collaborative business partners </p>
+                    </div>
+                    <div class="card-sust"><img src="./assets/imgs/rfq/image 212.svg">
+                        <h2>Global C-Smart marketing</h2>
+                        <p>offering purchase raw material for your <br> production and market your final product <br> to
+                            global market with its own virtual <br> showroom facilities</p>
+                    </div>
+                    <div class="card-sust"><img src="./assets/imgs/rfq/image 213.svg">
+                        <h2>Technological Team</h2>
+                        <p> real-time solutions provides online and <br> offline (upon request) from world class
+                            <br>technological or domain experts</p>
+                    </div>   
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="smart">
+        <div class="container">
+            <div class="text-img">
+                <img src="./assets/imgs/rfq/businessman explaining the strategy.svg">
+                <div class="text-smart">
+                    <h1>Smart Ai-RFQ</h1>
+                    <p>successful business gateway for procurement and supply</p>
+                    <button>Smart RFQ</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="container">
+            <div class="footers">
+                <div class="text__footer">
+                    <div class="logo-text">
+                        <h1>LOGO</h1>
+                        <p>Lorem ipsum dolor sit amet,consectetur<br>
+                            adipisicing elit. Quis non, fugit totam vel<br>
+                            laboriosam vitae.</p>
+                        <div class="social">
+                            <img src="./assets/imgs/rfq/coolicon-2.svg">
+                            <img src="./assets/imgs/rfq/coolicon-1.svg">
+                            <img src="./assets/imgs/rfq/coolicon.svg">
+                            <img src="./assets/imgs/rfq/Vector.svg">
+                        </div>
+                    </div>
+                    <div class="acc">
+                        <span><a href="#">My Account</a></span>
+                        <a href="#"><p>Authors</p></a>
+                        <a href="#"><p>Collection</p></a>
+                        <a href="#"><p>Author Profile</p></a>
+                        <a href="#"><p>Create Collection</p></a>
+                    </div>
+                    <div class="res">
+                        <span><a href="#">Resources</a></span>
+                        <a href="#"><p>Help & Support</p></a>
+                        <a href="#"><p>Live Auctions</p></a>
+                        <a href="#"><p>Item Details</p></a>
+                        <a href="#"><p>Activity</p></a>
+                    </div>
+                    <div class="comm">
+                        <span><a href="#">Communties</a></span>
+                        <a href="#"><p>About Us</p></a>
+                        <a href="#"><p>Contact Us</p></a>
+                        <a href="#"><p>Our Blog</p></a>
+                        <a href="#"><p>Discover</p></a>
+                    </div>
+                    <div class="text-form">
+                        <h3>Subscribe Us</h3>
+                        <form>
+                            
+                        </form>
                     </div>
                 </div>
             </div>
