только animation осталась

--- a/rfq.html
+++ b/rfq.html
@@ -192,17 +192,18 @@
                         <p>ill the proper requirement with <br>necessary documents from users</p>
                     </div>
                 </div>
-                <img src="./assets/imgs/rfq/Group 68.svg">
                 <div class="bloks__works">
+                    <img class="pol__1" id="p-1" src="./assets/imgs/rfq/Group 68.svg">
                     <img src="./assets/imgs/rfq/robot navigator plots the route.svg">
                     <div class="bloks__text">
                         <h2>Verifications</h2>
                         <p>hree layer inhouse verification techniques <br> verifies the RFQ reality and possibility with
-                            <br> using AI technologies and best experts</p>
+                            <br> using AI technologies and best experts
+                        </p>
                     </div>
                 </div>
-                <img src="./assets/imgs/rfq/Group 1000001766.svg">
                 <div class="bloks__works">
+                    <img class="pol__1" id="p-2" src="./assets/imgs/rfq/Group 1000001766.svg">
                     <img src="./assets/imgs/rfq/Man communicates with a voice assistant.svg">
                     <div class="bloks__text">
                         <h2>Request proposal</h2>
@@ -210,19 +211,15 @@
                             business and business <br> more and more powerful from us</p>
                     </div>
                 </div>
-                <img src="./assets/imgs/rfq/Group 1000001782.svg">
                 <div class="bloks__works">
+                    <img class="pol__1" id="p-3" src="./assets/imgs/rfq/Group 1000001782.svg">
                     <img src="./assets/imgs/rfq/robot navigator plots the route-1.svg">
                     <div class="bloks__text">
                         <h2>Step into smart contract</h2>
                         <p>business initiation takes place with <br>selected proposal</p>
                     </div>
                 </div>
-                <div class="bloks__works">
-                    <img src="">
-                    <h1></h1>
-                    <p></p>
-                </div>
+
             </div>
         </div>
     </div>
@@ -237,12 +234,15 @@
                 <div class="card__s">
                     <div class="card-sust"><img src="./assets/imgs/rfq/image 208.svg">
                         <h2>Research & analytics</h2>
-                        <p>wide range of research and analytics<br> provides clear insights of global business <br>market
-                            situations for upgrading the</p>
+                        <p>wide range of research and analytics<br> provides clear insights of global business
+                            <br>market
+                            situations for upgrading the
+                        </p>
                     </div>
                     <div class="card-sust"><img src="./assets/imgs/rfq/image 209.svg">
                         <h2>Innovations & Technologies</h2>
-                        <p>Strong one end AI- Platform helps to <br> instant procure, hiring supports, <br> technological
+                        <p>Strong one end AI- Platform helps to <br> instant procure, hiring supports, <br>
+                            technological
                             team, supply products to <br>global, and real-time </p>
                     </div>
                     <div class="card-sust"><img src="./assets/imgs/rfq/image 210.svg">
@@ -252,7 +252,8 @@
                     </div>
                     <div class="card-sust"><img src="./assets/imgs/rfq/image 211.svg">
                         <h2>Cost reduction</h2>
-                        <p>our smart services offering free services <br> that reducing wide range of third party <br> cost
+                        <p>our smart services offering free services <br> that reducing wide range of third party <br>
+                            cost
                             minimizing and on time supports <br> from collaborative business partners </p>
                     </div>
                     <div class="card-sust"><img src="./assets/imgs/rfq/image 212.svg">
@@ -263,8 +264,9 @@
                     <div class="card-sust"><img src="./assets/imgs/rfq/image 213.svg">
                         <h2>Technological Team</h2>
                         <p> real-time solutions provides online and <br> offline (upon request) from world class
-                            <br>technological or domain experts</p>
-                    </div>   
+                            <br>technological or domain experts
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -299,29 +301,56 @@
                     </div>
                     <div class="acc">
                         <span><a href="#">My Account</a></span>
-                        <a href="#"><p>Authors</p></a>
-                        <a href="#"><p>Collection</p></a>
-                        <a href="#"><p>Author Profile</p></a>
-                        <a href="#"><p>Create Collection</p></a>
+                        <a href="#">
+                            <p>Authors</p>
+                        </a>
+                        <a href="#">
+                            <p>Collection</p>
+                        </a>
+                        <a href="#">
+                            <p>Author Profile</p>
+                        </a>
+                        <a href="#">
+                            <p>Create Collection</p>
+                        </a>
                     </div>
                     <div class="res">
                         <span><a href="#">Resources</a></span>
-                        <a href="#"><p>Help & Support</p></a>
-                        <a href="#"><p>Live Auctions</p></a>
-                        <a href="#"><p>Item Details</p></a>
-                        <a href="#"><p>Activity</p></a>
+                        <a href="#">
+                            <p>Help & Support</p>
+                        </a>
+                        <a href="#">
+                            <p>Live Auctions</p>
+                        </a>
+                        <a href="#">
+                            <p>Item Details</p>
+                        </a>
+                        <a href="#">
+                            <p>Activity</p>
+                        </a>
                     </div>
                     <div class="comm">
                         <span><a href="#">Communties</a></span>
-                        <a href="#"><p>About Us</p></a>
-                        <a href="#"><p>Contact Us</p></a>
-                        <a href="#"><p>Our Blog</p></a>
-                        <a href="#"><p>Discover</p></a>
+                        <a href="#">
+                            <p>About Us</p>
+                        </a>
+                        <a href="#">
+                            <p>Contact Us</p>
+                        </a>
+                        <a href="#">
+                            <p>Our Blog</p>
+                        </a>
+                        <a href="#">
+                            <p>Discover</p>
+                        </a>
                     </div>
                     <div class="text-form">
-                        <h3>Subscribe Us</h3>
+                        <span><a href="#">Subscribe Us<a></span>
                         <form>
-                            
+                            <input type="email" id="email" placeholder="Info@yourgmail.com">
+                            <div class="but">
+                                <img src="./assets/imgs/rfq/Primary fill.svg">
+                            </div>
                         </form>
                     </div>
                 </div>
